# git-to-doc

./: .gitignore  BENCHMARKS.md  PR-673-changelog-2026-06-26.md  PR-703-changelog-2026-06-26.json  PR-703-changelog-2026-06-26.md  README.md  STORY.md  compare.py  doc.py  evaluate.py  model.py  pyproject.toml  renderer.py  sample.diff  testing.txt
benchmarks/: .gitignore  README.md
benchmarks/real_world/: README.md  harvest.py  run_eval.py
benchmarks/real_world/results/: 2026-07-06T11-06-45_qwen2.5-coder-14b__deepseek-coder-v2-latest.json
benchmarks/synthetic/: build_dataset.py  run_eval.py
benchmarks/synthetic/results/: 2026-07-06T05-58-31_qwen2.5-coder-14b__deepseek-coder-v2-latest.json
code/: pyproject.toml  requirements.txt
code/git_to_doc/: evaluate.py  renderer.py
examples/: PR-474.md
git_to_doc/: __init__.py  auditor.py  cli.py  compare.py  evaluate.py  model.py  renderer.py  theme.py  validate.py
git_to_doc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
git_to_doc/_internal/: __init__.py  compare.py
tests/: test_analyze_diff.py  test_audit_engine.py  test_merge_audits.py  test_renderer.py
