[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-to-doc"
version = "0.3.0-dev"
description = "Conventional Commit messages, changelogs & PRs from git diffs using Gemma (local or cloud)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
git-to-doc = "git_to_doc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_to_doc*"]
