[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-to-doc"
version = "0.3.0-dev"
description = "The audit layer for AI-generated commits. Independent, cross-family verification of what your diff actually did."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "psutil>=5.9",
]

[project.scripts]
git-to-doc = "git_to_doc.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["git_to_doc*"]
