[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-to-doc"
version = "0.4.1"
description = "The audit layer for AI-generated commits. Independent, cross-family verification of what your diff actually did."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shivansh Singh", email = "me.shivansh007@gmail.com" }]
keywords = ["git", "commit", "audit", "code-review", "ai", "llm", "ollama", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "psutil>=5.9",
]

[project.scripts]
git-to-doc = "git_to_doc.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/meshivanshsinghh/git-to-doc"
Repository = "https://github.com/meshivanshsinghh/git-to-doc"
Issues = "https://github.com/meshivanshsinghh/git-to-doc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_to_doc*"]
